[package]
name = "cuckoo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cuckoo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hudsucker = { version = "0.24", features = ["http2"] }
sea-orm = { version = "2.0.0-rc.21", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "schema-sync",
    "entity-registry",
] }
reqwest = { version = "0.13.1", features = [
    "json",
    "multipart",
    "http2",
] }
rcgen = "0.14"
prost = "0.14"
prost-reflect = "0.16"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
http = "1"
bytes = "1"
regex = "1"
tower = { version = "0.5", features = ["util"] }
axum = { version = "0.8.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
futures = "0.3"
tokio-stream = "0.1"
ts-rs = "11.1.0"
